[package]
name = "solana-builtins-default-costs"
description = "Solana builtins default costs"
documentation = "https://docs.rs/solana-builtins-default-costs"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.cargo-machete]
ignored = ["solana-frozen-abi", "solana-vote-program"]
# Add additional builtin programs here

[lib]
crate-type = ["lib"]
name = "solana_builtins_default_costs"

[features]
agave-unstable-api = []
frozen-abi = ["dep:solana-frozen-abi", "solana-vote-program/frozen-abi"]
dev-context-only-utils = ["dep:qualifier_attr"]

[dependencies]
agave-feature-set = { workspace = true }
ahash = { workspace = true }
qualifier_attr = { workspace = true, optional = true }
solana-frozen-abi = { workspace = true, optional = true, features = [
    "frozen-abi",
] }
solana-pubkey = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-vote-program = { workspace = true }

[dev-dependencies]
static_assertions = { workspace = true }

[lints]
workspace = true
