[package]
name = "solana-rayon-threadlimit"
description = "solana-rayon-threadlimit"
documentation = "https://docs.rs/solana-rayon-threadlimit"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.cargo-machete]
ignored = ["solana-rayon-threadlimit"]

[features]
agave-unstable-api = []

[dependencies]
log = { workspace = true }
num_cpus = { workspace = true }

[dev-dependencies]
solana-rayon-threadlimit = { path = ".", features = ["agave-unstable-api"] }
